[gd_scene load_steps=8 format=3 uid="uid://dyvtu758xr2so"]

[ext_resource type="Texture2D" uid="uid://bhjxc5s34c3cu" path="res://prototypes/game-shadows-of-surveillance/10.png" id="1_elldh"]
[ext_resource type="Script" path="res://scenes/LightSwitch.gd" id="2_4klox"]
[ext_resource type="Script" path="res://addons/pronto/behaviors/PlaceholderBehavior.gd" id="3_euvp3"]
[ext_resource type="TileSet" uid="uid://dp12gfueqor5q" path="res://tileset.tres" id="3_r5ys7"]
[ext_resource type="PackedScene" uid="uid://c5c24526dtufn" path="res://scenes/player1.tscn" id="3_x2hlg"]
[ext_resource type="Texture2D" uid="uid://dn87bxukebfvu" path="res://icon.svg" id="4_rqfal"]
[ext_resource type="Script" path="res://addons/pronto/behaviors/CollisionBehavior.gd" id="6_i4obq"]

[node name="Level" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(577, 323.5)
scale = Vector2(0.499132, 0.500772)
texture = ExtResource("1_elldh")

[node name="LightSwitch" type="Area2D" parent="." groups=["button"]]
position = Vector2(466, 480)
scale = Vector2(0.99, 0.99)
collision_layer = 2
collision_mask = 2
script = ExtResource("2_4klox")

[node name="SwitchPlaceholderBehavior" type="Node2D" parent="LightSwitch" groups=["button"]]
script = ExtResource("3_euvp3")
color = Color(1, 1, 0.0313726, 1)
sprite_texture = ExtResource("4_rqfal")
placeholder_size = Vector2(20, 20)

[node name="Player1" parent="." groups=["player"] instance=ExtResource("3_x2hlg")]
position = Vector2(99, 467)
collision_layer = 3
collision_mask = 3

[node name="LightSwitchBehavior" type="Node2D" parent="Player1"]
position = Vector2(1.74846e-05, -200)
script = ExtResource("6_i4obq")
limit_to_group = "button"

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("3_r5ys7")
format = 2
layer_0/tile_data = PackedInt32Array(2424834, 524288, 6, 2424835, 589824, 6, 2424836, 589824, 6, 2424837, 589824, 6, 2424838, 589824, 6, 2424839, 589824, 6, 2424840, 589824, 6, 2424841, 589824, 6, 2424842, 589824, 6, 2424843, 589824, 6, 2424844, 589824, 6, 2424845, 589824, 6, 2424846, 589824, 6, 2424847, 589824, 6, 2424848, 589824, 6, 2424849, 589824, 6, 2490370, 524288, 7, 2555906, 524288, 7, 2621442, 524288, 7, 2490371, 589824, 7, 2555907, 589824, 7, 2621443, 589824, 7, 2621444, 589824, 7, 2621445, 589824, 7, 2621446, 589824, 7, 2621447, 589824, 7, 2621448, 589824, 7, 2621449, 589824, 7, 2621450, 589824, 7, 2621451, 589824, 7, 2621452, 589824, 7, 2621453, 589824, 7, 2621454, 589824, 7, 2621455, 589824, 7, 2621456, 589824, 7, 2621457, 589824, 7, 2621458, 589824, 7, 2555922, 589824, 7, 2490386, 589824, 7, 2490385, 589824, 7, 2490384, 589824, 7, 2490383, 589824, 7, 2490382, 589824, 7, 2490381, 589824, 7, 2490380, 589824, 7, 2490379, 589824, 7, 2490378, 589824, 7, 2490377, 589824, 7, 2490376, 589824, 7, 2490375, 589824, 7, 2490374, 589824, 7, 2490373, 589824, 7, 2490372, 589824, 7, 2555908, 589824, 7, 2555909, 589824, 7, 2555910, 589824, 7, 2555911, 589824, 7, 2555912, 589824, 7, 2555913, 589824, 7, 2555914, 589824, 7, 2555915, 589824, 7, 2555916, 589824, 7, 2555917, 589824, 7, 2555918, 589824, 7, 2555919, 589824, 7, 2555920, 589824, 7, 2555921, 589824, 7, 2424850, 589824, 6, 2490387, 655360, 7, 2424851, 655360, 6, 2555923, 655360, 7, 2621459, 655360, 7, 2228250, 589824, 7, 2228251, 589824, 6, 2228252, 589824, 6, 2228253, 589824, 6, 2228254, 589824, 6, 2228255, 589824, 6, 2228256, 589824, 6, 2228257, 589824, 6, 2228258, 589824, 6, 2228259, 589824, 6, 2228260, 589824, 6, 2228261, 589824, 6, 2228262, 589824, 6, 2228263, 589824, 6, 2228264, 589824, 6, 2228249, 524288, 6, 2293785, 524288, 7, 2359321, 524288, 7, 2424857, 589824, 7, 2490393, 589824, 7, 2555928, 524288, 7, 2621464, 524288, 7, 2490392, 524288, 6, 2555929, 589824, 7, 2621465, 589824, 7, 2293786, 589824, 7, 2359322, 589824, 7, 2424858, 589824, 7, 2490394, 589824, 7, 2555930, 589824, 7, 2621466, 589824, 7, 2293787, 589824, 7, 2293788, 589824, 7, 2293789, 589824, 7, 2293790, 589824, 7, 2293791, 589824, 7, 2293792, 589824, 7, 2293793, 589824, 7, 2293794, 589824, 7, 2293795, 589824, 7, 2293796, 589824, 7, 2293797, 589824, 7, 2293798, 589824, 7, 2293799, 589824, 7, 2293800, 589824, 7, 2359336, 589824, 7, 2424872, 589824, 7, 2490408, 589824, 7, 2555944, 589824, 7, 2621480, 589824, 7, 2621479, 589824, 7, 2621478, 589824, 7, 2621477, 589824, 7, 2621476, 589824, 7, 2621475, 589824, 7, 2621474, 589824, 7, 2621473, 589824, 7, 2621472, 589824, 7, 2621471, 589824, 7, 2621470, 589824, 7, 2621469, 589824, 7, 2621468, 589824, 7, 2621467, 589824, 7, 2555931, 589824, 7, 2490396, 589824, 7, 2424859, 589824, 7, 2490395, 589824, 7, 2359323, 589824, 7, 2424860, 589824, 7, 2555933, 589824, 7, 2490397, 589824, 7, 2424861, 589824, 7, 2359325, 589824, 7, 2359324, 589824, 7, 2555932, 589824, 7, 2359327, 589824, 7, 2424863, 589824, 7, 2490399, 589824, 7, 2555935, 589824, 7, 2555934, 589824, 7, 2490398, 589824, 7, 2424862, 589824, 7, 2359326, 589824, 7, 2359328, 589824, 7, 2424864, 589824, 7, 2490400, 589824, 7, 2555936, 589824, 7, 2490401, 589824, 7, 2424865, 589824, 7, 2359329, 589824, 7, 2555937, 589824, 7, 2555938, 589824, 7, 2490402, 589824, 7, 2424866, 589824, 7, 2359330, 589824, 7, 2490403, 589824, 7, 2424867, 589824, 7, 2359331, 589824, 7, 2555939, 589824, 7, 2555940, 589824, 7, 2490404, 589824, 7, 2424868, 589824, 7, 2359332, 589824, 7, 2555941, 589824, 7, 2490405, 589824, 7, 2424869, 589824, 7, 2359333, 589824, 7, 2555942, 589824, 7, 2490406, 589824, 7, 2424870, 589824, 7, 2359334, 589824, 7, 2555943, 589824, 7, 2490407, 589824, 7, 2424871, 589824, 7, 2359335, 589824, 7, 2228265, 655360, 6, 2293801, 655360, 7, 2359337, 655360, 7, 2424873, 655360, 7, 2490409, 655360, 7, 2555945, 655360, 7, 2621481, 655360, 7)

[connection signal="body_entered" from="LightSwitch" to="Player1/LightSwitchBehavior" method="_on_area_2d_body_entered"]
